Basic nav and capistrano configuration

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -69,6 +69,7 @@ footer {
 }
 
 
-@import "utility/main";
-@import "animations/main";
-@import "generic/main";
+@import 'utility/main';
+@import 'animations/main';
+@import 'generic/main';
+@import 'nav/main';
