--- a/src/views/partials/nav.html
+++ b/src/views/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="flip-nav">
-  <ul>
+  <ul data-click-remove="nav-visible" data-click-remove-target="body">
     <li data-ui-sref-active="active">
       <a data-ui-sref="home"><i class="material-icons">dashboard</i></a>
     </li>
