Adds API status view

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -44,8 +44,8 @@ a.link {
 
 .wrapper {
   margin: 0 auto;
-  padding-top: 15vh;
-  min-height: calc(100vh - 15vh);
+  padding-top: 5vh;
+  min-height: calc(100vh - 5vh);
   max-width: 80vw;
   @include media("width>=875px") {
     max-width: 75vw;
@@ -70,8 +70,13 @@ footer {
   z-index: 100001;
 }
 
+.about {
+  min-height: 60vh;
+}
+
 
 @import 'utility/main';
 @import 'animations/main';
 @import 'generic/main';
 @import 'nav/main';
+@import 'status';
