Adds header to status page

--- a/src/views/status.html
+++ b/src/views/status.html
@@ -1,4 +1,7 @@
 <md-content>
+  <header class="status-header">
+    <h3>API Status</h3>
+  </header>
   <md-list flex>
     <status data-promise="authStatusPromise" data-service-name="Authentication"></status>
     <status data-promise="organizerStatusPromise" data-service-name="Organizer"></status>
