--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,7 +9,7 @@
 
 body {
   background-color: $md-clr-blue-500;
-  font-family: $caviar-dreams-stack;
+  font-family: $proxima-nova-stack;
   font-weight: $normal-weight;
   position: relative;
   min-height: 100%;
@@ -26,7 +26,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $caviar-dreams-stack;
+  font-family: $proxima-nova-stack;
   font-weight: $bold-weight;
 }
 
