--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -33,7 +33,7 @@ $intervals: 20 !default;
 $interval-size: $range / $intervals !default;
 
 // Colors
-$main-background: $md-clr-grey-200;
+$main-background: #FFF;
 
 $green: #00C853;
 $blue: #00B0FF;
