--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,5 +1,5 @@
 <md-content class="md-padding" layout-xs="column" layout="row">
-<div flex-xs flex-gt-xs="50" layout="column">
+<div flex-xs flex-gt-xs="50" layout="column" class="margin-horiz">
   <a href="//organizer.guclink.in">
      <md-card>
        <md-card-title>
