--- a/src/style/_status.scss
+++ b/src/style/_status.scss
@@ -3,7 +3,7 @@
   display: inline-block;
 }
 
-.status-item {
+.status-indicator {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -24,4 +24,15 @@
   width: 100%;
   text-align: center;
   padding: 1em;
+}
+
+.status-list {
+  margin: 2em auto 0;
+  width: 50%;
+}
+
+.status-item {
+  display: inline-block;
+  padding: 1em;
+  width: 100%;
 }
