--- a/src/views/status.html
+++ b/src/views/status.html
@@ -1,8 +1,8 @@
-<md-content>
+<div class="margin-horiz">
   <header class="status-header">
     <h3>API Status</h3>
   </header>
-  <md-list flex>
+  <div class="flex-column-between status-list">
     <status data-promise="authStatusPromise" data-service-name="Authentication"></status>
     <status data-promise="organizerStatusPromise" data-service-name="Organizer"></status>
     <status data-promise="attendanceStatusPromise" data-service-name="Attendance"></status>
@@ -11,5 +11,5 @@
     <status data-promise="examStatusPromise" data-service-name="Exam"></status>
     <status data-promise="parkingStatusPromise" data-service-name="Parking"></status>
     <status data-promise="dataStatusPromise" data-service-name="Data"></status>
-  </md-list>
-</md-content>
+  </div>
+</div>
